# patentcoin

./: .appveyor.yml  .fuzzbuzz.yml  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac  libpatentcoinconsensus.pc.in  newcoin.sh
.tx/: config
build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  patentcoin.sln  patentcoin_config.h
contrib/: README.md  gitian-build.py  install_db4.sh  patentcoin-cli.bash-completion  patentcoin-qt.pro  patentcoin-tx.bash-completion  patentcoind.bash-completion  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  patentcoin-conf.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  patentcoin-cli.1  patentcoin-qt.1  patentcoin-tx.1  patentcoin-wallet.1  patentcoind.1
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  bloom.h  (+102 more)
(+752 files in other folders)
