dist_man1_MANS=

if BUILD_PATENTCOIND
  dist_man1_MANS+=patentcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=patentcoin-qt.1
endif

if BUILD_PATENTCOIN_CLI
  dist_man1_MANS+=patentcoin-cli.1
endif

if BUILD_PATENTCOIN_TX
  dist_man1_MANS+=patentcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_PATENTCOIN_WALLET
  dist_man1_MANS+=patentcoin-wallet.1
endif
endif
